Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105687

developer-build fails for QSemaphore

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 6.4.0 RC1, 6.5.0 Beta1
    • 6.4.0 Beta3
    • Core: Threads
    • None
    • GCC 12.1
    • Linux/Yocto
    • 1022922037 (qt/qtbase/dev) 6676b7ca69 (qt/qtbase/6.4) 6676b7ca69 (qt/tqtc-qtbase/6.4)

    Description

      developer-build fails for 32-bit targets (arm, x86):

      agent:2022/08/16 05:11:02 build.go:394: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.5.0-r0/git/src/corelib/thread/qsemaphore.cpp: In function 'bool futexSemaphoreTryAcquire_loop(QBasicAtomicInteger<unsigned int>&, quintptr, quintptr, int)':
      agent:2022/08/16 05:11:02 build.go:394: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.5.0-r0/git/src/corelib/thread/qsemaphore.cpp:164:26: error: right shift count >= width of type [-Werror=shift-count-overflow]
      agent:2022/08/16 05:11:02 build.go:394: |   164 |                 curValue >>= 32;
      agent:2022/08/16 05:11:02 build.go:394: |       |                 ~~~~~~~~~^~~~~~
      agent:2022/08/16 05:11:02 build.go:394: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.5.0-r0/git/src/corelib/thread/qsemaphore.cpp: In function 'bool futexSemaphoreTryAcquire(QBasicAtomicInteger<unsigned int>&, int, int)':
      agent:2022/08/16 05:11:02 build.go:394: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.5.0-r0/git/src/corelib/thread/qsemaphore.cpp:216:24: error: right shift count >= width of type [-Werror=shift-count-overflow]
      agent:2022/08/16 05:11:02 build.go:394: |   216 |         if (((curValue >> 32) & 0x7fffffffU) == 0x7fffffffU) {
      agent:2022/08/16 05:11:02 build.go:394: |       |               ~~~~~~~~~^~~~~
      agent:2022/08/16 05:11:02 build.go:394: | cc1plus: all warnings being treated as errors 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes