QSemaphore: Fix warnings about shift exceeding size on 32-bit

error: right shift count >= width of type [-Werror=shift-count-overflow]

Fixes: QTBUG-105687
Change-Id: Ic6547f8247454b47baa8fffd170bd9cd0e2a8ca3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 1022922037e794f3687d7c58f8b2caa44343a43b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>